--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,8 +23,11 @@ jobs:
         java-version: '17'
         distribution: 'zulu'
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew clean build -x test
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
