--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build -x test
       env:
-        database.url: ${{ secrets.DB_URL }}
-        database.username: ${{ secrets.DB_USERNAME }}
-        database.password: ${{ secrets.DB_PASSWORD }}
+        DB_URL: ${{ secrets.DB_URL }}
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
