--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,8 +6,9 @@ spring:
         driver-class-name: com.mysql.cj.jdbc.Driver
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: validate
         show-sql: true
         properties:
             hibernate:
                 format_sql: true
+                default_batch_fetch_size: 100
